# TinkerPilot

./: .gitignore  LICENSE  Makefile  README.md  install.sh  uninstall.sh
.github/workflows/: build-and-release.yml
backend/: MANIFEST.in  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: chat.py  digest.py  documents.py  meetings.py  search.py  tasks.py  utils.py
backend/app/core/: chunker.py  embeddings.py  llm.py  moonshine_stt.py  parsers.py  rag.py  tts.py  whisper_stt.py
backend/app/db/: models.py  sqlite.py  vector.py
backend/app/integrations/: apple_calendar.py  apple_notes.py  obsidian.py
backend/cli/: main.py
docs/: MODEL_SELECTION.md
docs-site/: docusaurus.config.js  package-lock.json  sidebars.js
docs-site/docs/: architecture.md  cli-reference.md  getting-started.md  how-to-extend.md  index.md  model-selection.md  project-structure.md
docs-site/docs/getting-started/: running-the-app.md  setup.md
docs-site/docs/implementation/: backend.md  frontend.md  index.md  local-ai.md
docs-site/docs/references/: cli-reference.md  how-to-extend.md  index.md  model-selection.md
docs-site/src/components/HomepageFeatures/: index.js
docs-site/src/pages/: index.js
frontend/: next.config.js  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/meetings/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/components/: Sidebar.tsx
frontend/src/lib/: api.ts
scripts/: download_models.py  setup.sh  start.sh  update_github.sh
(+2 files in other folders)
